--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ serde = { version = "1.0", features = ["derive"] }
 petgraph = { version = "0.5" }
 tui = { version = "0.15", default-features = false, features = ["crossterm"] }
 anyhow = "1.0"
+atty = "0.2"
+exitcode = "1.1"
