--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ tui = { version = "0.15", default-features = false, features = ["crossterm"] }
 anyhow = "1.0"
 atty = "0.2"
 exitcode = "1.1"
+itertools = "0.10"
